# pepe-2026-template

./: README.md  main.py  pyproject.toml
inputs/registration/: transform_Affine_AllenPIRRAS100um-2-fUSIPIRRAS_Composite.h5
